[gd_scene load_steps=2 format=2]

[ext_resource path="res://scripts/TradeScreen.gd" type="Script" id=1]

[node name="Trade" type="Panel"]
anchor_right = 1.0
anchor_bottom = 1.0
script = ExtResource( 1 )

[node name="Trainer" type="Panel" parent="."]
anchor_right = 1.0
anchor_bottom = 1.0

[node name="RichTextLabel" type="RichTextLabel" parent="Trainer"]
anchor_left = 0.382813
anchor_top = 0.28
anchor_right = 0.617188
anchor_bottom = 0.72
margin_bottom = -3.05176e-05
__meta__ = {
"_edit_use_anchors_": true
}

[node name="Connecting" type="Panel" parent="."]
anchor_right = 1.0
anchor_bottom = 1.0

[node name="Create_Server" type="Button" parent="Connecting"]
anchor_left = 0.382813
anchor_top = 0.48
anchor_right = 0.492188
anchor_bottom = 0.52
text = "Create server"
__meta__ = {
"_edit_use_anchors_": true
}

[node name="Join_Server" type="Button" parent="Connecting"]
anchor_left = 0.507813
anchor_top = 0.48
anchor_right = 0.617188
anchor_bottom = 0.52
text = "Join Server"
__meta__ = {
"_edit_use_anchors_": true
}

[node name="IP_Address" type="LineEdit" parent="Connecting"]
anchor_left = 0.382813
anchor_top = 0.526667
anchor_right = 0.617188
anchor_bottom = 0.566667
align = 1
placeholder_text = "Enter IP Address"
__meta__ = {
"_edit_use_anchors_": true
}

[node name="Label" type="Label" parent="Connecting"]
anchor_left = 0.382813
anchor_top = 0.44
anchor_right = 0.617188
anchor_bottom = 0.473333
__meta__ = {
"_edit_use_anchors_": true
}

[node name="Trainers" type="Node" parent="."]

[connection signal="pressed" from="Connecting/Create_Server" to="." method="_on_Create_Server_pressed"]
[connection signal="pressed" from="Connecting/Join_Server" to="." method="_on_Join_Server_pressed"]
